home page addition

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "charan-epuri",
-  "homepage": "https://245charan.github.io.charan-epuri.dev/",
+  "homepage": "https://245charan.github.io/charan-epuri.dev/",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
