--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "charan-epuri",
   "homepage": "https://245charan.github.io/charan-epuri.dev/",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -35,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-scroll": "^1.9.3",
