--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-redux": "^9.2.0",
@@ -55,6 +55,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
