--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@microsoft/clarity": "^1.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-redux": "^9.2.0",
